--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ ImageMagick-6.4.0-multilib.patch
 /ImageMagick-6.8.6-3.tar.xz
 /ImageMagick-6.8.7-0.tar.xz
 /ImageMagick-6.8.8-10.tar.xz
+/ImageMagick-6.9.0-9.tar.xz
