- New version 6.9.1-2 - bz#1204371.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ ImageMagick-6.4.0-multilib.patch
 /ImageMagick-6.8.8-10.tar.xz
 /ImageMagick-6.9.0-9.tar.xz
 /ImageMagick-6.9.0-10.tar.xz
+/ImageMagick-6.9.1-2.tar.xz
