--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ ImageMagick-6.4.0-multilib.patch
 /ImageMagick-6.9.0-9.tar.xz
 /ImageMagick-6.9.0-10.tar.xz
 /ImageMagick-6.9.1-2.tar.xz
+/ImageMagick-6.9.1-3.tar.bz2
