--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ ImageMagick-6.4.0-multilib.patch
 /ImageMagick-6.9.1-2.tar.xz
 /ImageMagick-6.9.1-3.tar.bz2
 /ImageMagick-6.9.2-7.tar.xz
+/ImageMagick-6.9.3-0.tar.xz
