--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ ImageMagick-6.4.0-multilib.patch
 /ImageMagick-6.9.2-7.tar.xz
 /ImageMagick-6.9.3-0.tar.xz
 /ImageMagick-6.9.9-3.tar.xz
+/ImageMagick-7.0.6-9.tar.bz2
